cmps104a/asg5/test/95-cobol.oc.err
oc: 95-cobol.oc: 3: syntax error, unexpected TOK_INTCON
/usr/bin/cpp  95-cobol.oc: status 0x0200, exit 2
