cmps104a/asg5/test/95-cobol.str
stringset[   1]:    8476822520031942378: 0x10ddd38->"EXIT"
                    4533532405753959164: 0x10d5b38->"001100"
stringset[   2]:    2594088158685378223: 0x10dd928->"10"
                   10268214354146226833: 0x10dcd48->"1200"
stringset[   3]:    8848093992654105885: 0x10ddab8->"RUN"
                    9899794913433185065: 0x10d5468->"DIVISION."
stringset[   4]:    5992026097059719199: 0x10d5e28->"MAIN-LOGIC"
stringset[   6]:    5975919029562434157: 0x10d6238->"world!""
stringset[   7]:   11668471760152936011: 0x10d5418->"IDENTIFICATION"
stringset[  11]:    9692788208439722702: 0x10d59f8->"OBJECT-COMPUTER."
                   12027481764534909395: 0x10d5948->"RM-COBOL."
                   14618159606949852052: 0x10d54b8->"000200"
stringset[  12]:    2817478050987672464: 0x10db8a8->"500"
stringset[  14]:   16505281302463325882: 0x10d5848->"SECTION."
stringset[  15]:    8749905388617569012: 0x10dd248->"BEGIN"
                    8083954885302234186: 0x10db678->"400"
                   13667612406867811666: 0x10d63c8->"RUN."
stringset[  16]:    8528942095927433006: 0x10dd798->""Hello world!""
                    3485831935091574919: 0x10d5ec8->"BEGIN."
stringset[  19]:    2366151243705444291: 0x10d60f8->"ERASE"
stringset[  20]:   14773745439228563802: 0x10d5bd8->"100700"
stringset[  22]:   10159970873491820195: 0x10d6058->"1"
stringset[  24]:     848867923138271600: 0x10d55a8->"000300"
stringset[  25]:    4603147665287872912: 0x10dcfc8->"MAIN"
                    6343797728819096967: 0x10d5dd8->"100200"
stringset[  28]:    4764204919547260605: 0x10dc3e8->"OBJECT"
                     101296173680447455: 0x10d5648->"000500"
stringset[  29]:    8115490840279316602: 0x10db0d8->"PROGRAM"
stringset[  30]:   10309170059231547679: 0x10d58f8->"SOURCE-COMPUTER."
                   17449304726471560091: 0x10d5558->"HELLOWORLD."
stringset[  31]:   11041821498051098868: 0x10dcb18->"1100"
stringset[  32]:   11749562128152811880: 0x10d5898->"000700"
stringset[  33]:    3462224256807982264: 0x10dc168->"COBOL"
stringset[  35]:   16250758790188753277: 0x10d5d88->"100100"
stringset[  36]:   18104328237522131839: 0x10dbc18->"SECTION"
stringset[  39]:    6637962690434301267: 0x10dbb28->"600"
                    3000827399044917548: 0x10dae08->"DIVISION"
stringset[  40]:    5023835908241093643: 0x10db218->"ID"
stringset[  42]:    8123926825918656885: 0x10d57a8->"PROCEDURE"
stringset[  43]:   10110854800518129440: 0x10dbf88->"COMPUTER"
                    6530573821985112690: 0x10d6378->"STOP"
stringset[  47]:   16224746280471176453: 0x10d5cd8->"EXIT."
                    5707671176792890449: 0x10d55f8->"000400*"
stringset[  48]:   15130070450414024771: 0x10dd608->"EOS"
stringset[  50]:    3346600377836954007: 0x10d5b88->"FILE"
stringset[  51]:      65578900156297455: 0x10d5508->"PROGRAM-ID."
stringset[  52]:    4975450011984783841: 0x10d5788->"100000"
stringset[  53]:   11262925248683168980: 0x10db4e8->"300"
stringset[  54]:    2856247231245445436: 0x10d5c88->"100800"
stringset[  55]:    6170948393124337101: 0x10dbdf8->"700"
                    2297668033614959926: 0x10daae8->"0"
                   17675615744022553182: 0x10d57f8->"CONFIGURATION"
                   16474229124768219677: 0x10d56e8->"000600"
                     159993502864411231: 0x10d53c8->"000100"
stringset[  56]:    1559822377874549718: 0x10dd0b8->"LOGIC"
                   11683372015007288834: 0x10d5a48->"000900"
stringset[  59]:   14633305175400438363: 0x10d6198->"100500"
stringset[  60]:   10763892105548688733: 0x10d6328->"100600"
stringset[  62]:    9459438815593384502: 0x10d5ae8->"DATA"
stringset[  64]:    5687493358103633321: 0x10d5738->"001200"
                    3806281540898964462: 0x10d5fb8->"""
stringset[  68]:   15129060197165267835: 0x10dc348->"800"
                   11590517852533769637: 0x10d5998->"000800"
stringset[  70]:   12485971477340877982: 0x10d5a98->"001000"
                     603146580336197870: 0x10d6288->"15"
stringset[  72]:    2963571779194552878: 0x10d5f18->"100400"
stringset[  76]:    3031676173105530525: 0x10d60a8->"POSITION"
stringset[  78]:    7989954789217878515: 0x10d5698->"ENVIRONMENT"
stringset[  79]:    6340238197210063670: 0x10d5018->"100"
                   11133740230814649646: 0x10d5f68->"DISPLAY"
stringset[  80]:   16079285148485733777: 0x10dc8e8->"1000"
                     607052256690452275: 0x10dc7a8->"900"
stringset[  82]:    6921971865612019692: 0x10dc078->"RM"
                    5043462581395144197: 0x10d61e8->""Hello"
stringset[  85]:   10010194838115560012: 0x10dd3d8->"" ""
                    7372855250431704371: 0x10db178->"-"
stringset[  86]:    3506203549115477658: 0x10db308->"HELLOWORLD"
stringset[  88]:    1632198207615728178: 0x10d6008->"LINE"
stringset[  89]:    6637313742931709005: 0x10db718->"*"
                   15099569138734304119: 0x10daea8->"."
stringset[  90]:     816481200638801389: 0x10dbe98->"SOURCE"
                    5564098233480155772: 0x10d5c38->"MAIN-LOGIC-EXIT."
stringset[  93]:    8318437171067493754: 0x10db038->"200"
                     659007858766936891: 0x10d6148->"EOS."
                   13562144813845494497: 0x10d62d8->"10."
stringset[  94]:    9851758844805121084: 0x10d5e78->"100300"
load_factor = 0.887
bucket_count = 97
max_bucket_size = 5
